--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,8 @@ services:
     env_file:
      - secrets.env
     networks:
-      - gdax_stream_moonraker
-
-  mongo:
-    image: mongo
-    restart: unless-stopped 
-    env_file:
-      - secrets.env
-    networks:
-      - gdax_stream_moonraker
+      - infrastructure_moonraker
 
 networks:
-  gdax_stream_moonraker:
+  infrastructure_moonraker:
     external: true
