--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./docker/Dockerfile
     volumes:
       - /var/log/sacred_tensorboard:/var/log/sacred_tensorboard
+      - /var/moonraker_models:/var/moonraker_models
     env_file:
      - secrets.env
     networks:
