--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ bayesian-optimization==0.6.0
 docker-compose==1.21.0
 GitPython==2.1.10
 keras==2.1.6
+phased_lstm_keras==1.0.2
 psycopg2==2.7.4
 pymongo==3.6.1
 sacred==0.7.2
 sqlalchemy==1.2.7
 tensorflow==1.8.0
+ipython
 
