--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -2,10 +2,8 @@
 FROM ubuntu:18.04
 
 RUN apt-get update && \
-	apt-get install python3 python3-pip git wget -y && \
-	mkdir app /var/log/sacred_tensorboard  /var/moonraker_models
-
-ENV JUPYTER_PATH=/app/lib
+	apt-get install python3-pip git wget -y && \
+	mkdir app /var/log/sacred_tensorboard /var/moonraker_models
 
 ENV PYTHONPATH=/app/lib
 
@@ -13,10 +11,6 @@ ADD ./ /app
 
 RUN --mount=type=secret,id=gitlab_credentials.ini \ 
 	cd /app && \
-	pip3 install --process-dependency-links -e .[jupyter]
-
-ENV JUPYTER_PATH=/app/lib
-
-ENV PYTHONPATH=/app/lib
+	pip3 install --process-dependency-links -e .
 
 WORKDIR /app
