--- a/helm/coinbase-train/Chart.yaml
+++ b/helm/coinbase-train/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v1
-appVersion: "1.0"
 description: Helm charts for deploying coinbase_train repo
 name: coinbase-train
-version: 0.1.0
+version: 0.1.0-test
