--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,6 @@ include:
     file: '.gitlab-ci-templates.yml'
     ref: master
 
-stages:
-  - increment_version
-  - build
-
 #YAML Anchors
 .create_credentials_ini_file: &create_credentials_ini_file |
   cat << EOF > gitlab_credentials.ini 
@@ -17,8 +13,18 @@ stages:
 
 #CI Jobs
 
-increment_version:increment_version:
-  extends: .increment_version
+build:build_cpu_image:
+  extends: .build_image
+      
+  before_script:
+    - *create_credentials_ini_file
+  
+  stage: build
+
+  variables:
+   DOCKER_ARGS: '--secret id=gitlab_credentials.ini,src=gitlab_credentials.ini -f dockerfiles/Dockerfile.cpu'
+   DOCKER_BUILDKIT: 1
+   DOCKER_REPO: $CI_REGISTRY_IMAGE/cpu
 
 build:build_gpu_image:
   extends: .build_image
@@ -33,15 +39,9 @@ build:build_gpu_image:
    DOCKER_BUILDKIT: 1
    DOCKER_REPO: $CI_REGISTRY_IMAGE/gpu
 
-build:build_cpu_image:
-  extends: .build_image
-      
-  before_script:
-    - *create_credentials_ini_file
-  
-  stage: build
+build:package_helm_chart:
+  extends: .package_helm_chart
 
   variables:
-   DOCKER_ARGS: '--secret id=gitlab_credentials.ini,src=gitlab_credentials.ini -f dockerfiles/Dockerfile.cpu'
-   DOCKER_BUILDKIT: 1
-   DOCKER_REPO: $CI_REGISTRY_IMAGE/cpu
+    HELM_ARGS: "--dependency-update"
+    CHART_NAME: coinbase-train
