--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,10 @@ include:
     file: '.gitlab-ci-templates.yml'
     ref: master
 
+stages:
+  - increment_version
+  - build
+
 #YAML Anchors
 .create_credentials_ini_file: &create_credentials_ini_file |
   cat << EOF > gitlab_credentials.ini 
@@ -13,18 +17,8 @@ include:
 
 #CI Jobs
 
-build:build_cpu_image:
-  extends: .build_image
-      
-  before_script:
-    - *create_credentials_ini_file
-  
-  stage: build
-
-  variables:
-   DOCKER_ARGS: '--secret id=gitlab_credentials.ini,src=gitlab_credentials.ini -f dockerfiles/Dockerfile.cpu'
-   DOCKER_BUILDKIT: 1
-   DOCKER_REPO: $CI_REGISTRY_IMAGE/cpu
+increment_version:increment_version:
+  extends: .increment_version
 
 build:build_gpu_image:
   extends: .build_image
@@ -38,6 +32,19 @@ build:build_gpu_image:
    DOCKER_ARGS: '--secret id=gitlab_credentials.ini,src=gitlab_credentials.ini -f dockerfiles/Dockerfile.gpu'
    DOCKER_BUILDKIT: 1
    DOCKER_REPO: $CI_REGISTRY_IMAGE/gpu
+
+build:build_cpu_image:
+  extends: .build_image
+      
+  before_script:
+    - *create_credentials_ini_file
+  
+  stage: build
+
+  variables:
+   DOCKER_ARGS: '--secret id=gitlab_credentials.ini,src=gitlab_credentials.ini -f dockerfiles/Dockerfile.cpu'
+   DOCKER_BUILDKIT: 1
+   DOCKER_REPO: $CI_REGISTRY_IMAGE/cpu
 
 build:package_helm_chart:
   extends: .package_helm_chart
