--- a/helm/coinbase-train/values.yaml
+++ b/helm/coinbase-train/values.yaml
@@ -1,2 +1,9 @@
-num_cpus: 3.0
-num_gpus: 1
+job:
+  enabled: false
+  num_cpus: 3.0
+  num_gpus: 1
+
+notebook:
+  enabled: true
+  num_cpus: 3.0
+  num_gpus: 1.0
