--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -11,6 +11,6 @@ ADD ./ /app
 
 RUN --mount=type=secret,id=gitlab_credentials.ini \ 
 	cd /app && \
-	pip3 install --process-dependency-links -e .
+	pip3 install --process-dependency-links -e .[jupyter]
 
 WORKDIR /app
