Update helm/coinbase-train/templates/jupyter_deployment.yaml, helm/coinbase-train/templates/coinbase_train_job.yaml files

--- a/helm/coinbase-train/templates/coinbase_train_job.yaml
+++ b/helm/coinbase-train/templates/coinbase_train_job.yaml
@@ -44,4 +44,11 @@ spec:
             cpu: {{ .Values.job.num_cpus }}
             nvidia.com/gpu: {{ .Values.job.num_gpus }}
 
+        {{ if gt .Values.notebook.num_gpus 0.0}}
+        tolerations:
+        - key: "gpu"
+          operator: "Exists"
+          effect: "NoSchedule"
+        {{ end }}
+
 {{ end }}
