--- a/helm/coinbase-train/templates/jupyter_deployment.yaml
+++ b/helm/coinbase-train/templates/jupyter_deployment.yaml
@@ -58,4 +58,11 @@ spec:
           limits:
             cpu: {{ .Values.notebook.num_cpus }}
             nvidia.com/gpu: {{ .Values.notebook.num_gpus }}
+
+        {{ if gt .Values.notebook.num_gpus 0.0}}
+        tolerations:
+        - key: "gpu"
+          operator: "Exists"
+          effect: "NoSchedule"
+        {{ end }}
 {{ end }}
