--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -1,16 +1,15 @@
 # syntax=docker/dockerfile:1.0.0-experimental
-FROM ubuntu:18.04
+FROM python:3.6
 
 RUN apt-get update && \
-	apt-get install python3-pip git wget -y && \
+	apt-get install git -y && \
 	mkdir app /var/log/sacred_tensorboard /var/moonraker_models
-
-ENV PYTHONPATH=/app/lib
 
 ADD ./ /app
 
-RUN --mount=type=secret,id=gitlab_credentials.ini \ 
-	cd /app && \
-	pip3 install --process-dependency-links -e .[jupyter]
-
 WORKDIR /app
+
+RUN --mount=type=secret,id=gitlab_credentials.ini \ 
+	python3 setup.py install
+
+
