--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -2,7 +2,7 @@
 FROM nvidia/cuda:10.0-cudnn7-runtime-ubuntu18.04 
 
 RUN apt-get update && \
-	apt-get install python3 git libgomp1-y && \
+	apt-get install python3-pip git libgomp1 -y && \
 	mkdir app /var/log/sacred_tensorboard /var/moonraker_models
 
 ADD ./ /app
