Updated Dockerfile to use app directory for source code

--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -10,6 +10,5 @@ ADD ./ /app
 WORKDIR /app
 
 RUN --mount=type=secret,id=gitlab_credentials.ini \ 
-	python3 setup.py install
-
-
+	python3 setup.py install && \
+	pip3 install -e .
