--- a/helm/coinbase-train/templates/coinbase_train_job.yaml
+++ b/helm/coinbase-train/templates/coinbase_train_job.yaml
@@ -25,7 +25,11 @@ spec:
       containers:
       - name: coinbase-train
 
-        command: ['python3', 'coinbase_train/train.py']
+        command: 
+          - 'python3'
+          - 'coinbase_train/train.py'
+          - 'with'
+          - 'staging'
 
         env:
           - name: MONGO_INITDB_ROOT_PASSWORD
