--- a/helm/coinbase-train/templates/coinbase_train_job.yaml
+++ b/helm/coinbase-train/templates/coinbase_train_job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-train-{{.Chart.Version}}
+  name: {{.Release.Name}}-train-{{.Chart.Version | trunc 12}}
   labels:
     app: coinbase-train
 spec:
